# tesseract_detector_benchmark

./: Dockerfile  Makefile  README.md  crop_from_bounding_box.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  test.py  test_iou_calculation.py  test_tesseract_boxes.py  test_tesseract_output.py
engine/: bounding_box.py  bounding_box_engine.py  example.py  iou.py  iou_engine.py  main_engine.py  tesseract_engine.py
groundtruth/: draw_from_cordinate.py  draw_rectangle.py  groundtruth.txt
groundtruth/sample_original/: eng_01.txt  eng_02.txt  eng_03.txt  eng_cap_char.txt  eng_cap_char_space.txt  eng_char.txt  eng_char_space.txt  eng_number.txt  eng_number_space.txt  sign.txt  sign_space.txt  tha_01.txt  tha_02.txt  tha_03.txt  tha_char.txt  tha_char_space.txt  tha_number.txt  tha_number_space.txt  tha_vowal.txt  tha_vowal_pure.txt
