[tool.poetry]
name = "Tesseract_benchmark_detections"
version = "1.0.0"
description = ""
authors = ["Kobayashi-UwU <tai242415597@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gradio = "^4.28.3"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
gevent = "^22.10.2"
pytesseract = "^0.3.10"
pillow = "^10.3.0"
[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
